[package]
name = "cosmic-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["winit", "tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["default"] }
rss = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
futures = "0.3"
